# svojaigra

./: CHANGELOG.md  CMakeLists.txt  crowdin.yaml  crowdin.yml  icon.rc
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  other.yml  отчёт-об-ошибке.md  ✨-запрос-новой-функциональности.md  💬-другое.md
.github/workflows/: main.yml
resources/: resources.qrc
resources/help/: help_be.md  help_en.md  help_ru.md
resources/questions/: questions_be.json  questions_en.json  questions_ru.json
resources/translations/: svojaigra_be.ts  svojaigra_en.ts  svojaigra_ru.ts
src/: main.cpp
src/core/: FileManager.cpp  FileManager.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  Question.cpp  Question.h  UserManager.cpp  UserManager.h
src/ui/: AdminEditor.cpp  AdminEditor.h  AdminEditor.ui  GameSetupDialog.cpp  GameSetupDialog.h  HelpDialog.cpp  HelpDialog.h  LeaderboardDialog.cpp  LeaderboardDialog.h  MainWindow.cpp  MainWindow.h  PlayerNameDialog.cpp  PlayerNameDialog.h  QuestionDialog.cpp  QuestionDialog.h  QuestionEditDialog.cpp  QuestionEditDialog.h  QuestionEditDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  StartWindow.cpp  StartWindow.h  StartWindow.ui
